# ZhuZhao

./: .gitignore
src/PhotometricStereo/: CMakeLists.txt  PhotometricStereo.cpp  PhotometricStereo.h
src/ZhuZhaoGUI/: MainWindow.cpp  MainWindow.h  ZhuZhaoGUI.pro  ZhuZhaoGUIResource.qrc  language_ch.qm  language_ch.ts  main.cpp
src/ZhuZhaoGUI/Resouce/translate/: language_ch.qm
src/ZhuZhaoGUI/ZZConfigWidget/: ZZConfigWidget.cpp  ZZConfigWidget.h  ZZOneParameterWidget.cpp  ZZOneParameterWidget.h
src/ZhuZhaoGUI/ZZLogWidget/: ZZLogMessage.cpp  ZZLogMessage.h  ZZLogWidget.cpp  ZZLogWidget.h
src/ZhuZhaoGUI/ZZThumWidget/: HThumnailList.cpp  HThumnailList.h  LitImgItemWidget.cpp  LitImgItemWidget.h  VThumnailList.cpp  VThumnailList.h
src/ZhuZhaoGUI/ZZViewWidget/: CustomImageView.cpp  CustomImageView.h  CustomImageViewItem.cpp  CustomImageViewItem.h  CustomImageViewWidget.cpp  CustomImageViewWidget.h
src/ZhuZhaoGUI/const/: const.h
