# S.1工程创建
CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(PhotometricStereo)
set(CMAKE_CXX_STANDARD 17)

# S.2定义binary和library路径
set(ZZ_ROOT ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "zhuzhao root")
set(ZZ_DEBUG_BUILD_DIR "${ZZ_ROOT}/../bin" CACHE PATH "Debug Build Dir")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${ZZ_DEBUG_BUILD_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ZZ_DEBUG_BUILD_DIR})

# S.寻找第三方库
FIND_PACKAGE(OpenCV REQUIRED)

# S.2创建光度立体算法动态库
FILE(GLOB 
	DLL_SRCS
	PhotometricStereo.cpp 
	PhotometricStereo.h
	)

add_library(PhotometricStereoDLL SHARED ${DLL_SRCS})
add_compile_definitions(ALGO_EXPORT)
TARGET_LINK_LIBRARIES(PhotometricStereoDLL ${OpenCV_LIBS})
